# PGP

./: .gitignore  CMakeLists.txt  README.md  Темы для докладов.xlsx  Успеваемость.xlsx
cp/kp_pgp_7/: report.docx
cp/kp_pgp_7/code/: conv.sh  cpu.txt  diff.patch  gpu.txt  in.txt  main.cu  tmp.cu
cp/kp_pgp_7/Вариант 5/kp_pgp/: main.cu
cp/kp_pod_7/: report.docx
cp/kp_pod_7/code/: gpu.txt  main.cu
labs/lab1/: cpu.cu  main.cu  main.cu.asc  report.docx  report.pdf.asc  test_gen.py
labs/lab2/: cpu.cu  main.cu  report.docx
labs/lab2/img/: kit_600x600.data  ssaa_kit.data
labs/lab2/tests/: big.t  mid.t  small.t  test.t
labs/lab3/: cpu.cu  gimp.xcf  gimp3.xcf  input  main.cpp  main.cu  report.odt
labs/lab3/img/: 150x150.data  150x150_out.data  600x600_out.data
labs/lab3/tests/: low.t  mid.t
labs/lab4/: input1  main.cpp  main.cu  report.docx  test_gen.py
labs/lab5/: main.cu  report.docx  write_data.cpp
labs/lab7/: CMakeLists.txt  main.cpp  report.odt
labs/lab7/samples/: mpi_first_sample.cpp  sample_mpi.cpp
labs/lab8/: CMakeLists.txt  correct  den.cu  main.cpp  main.cu  report.docx
labs/lab8/samples/: mpi-io3.cpp  mpi_first_sample.cpp
labs/lab9/: main.cpp  report.docx
Примеры с лекций/: a.out  prof.cu  thrust.cu
Шаблоны отчетов/: Шаблон отчета КП ПГП.docx  Шаблон отчета КП ПОД.docx  Шаблон отчета ЛР ПОД.docx
